--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "@kroo-tech/eslint-config",
-  "version": "1.0.1",
-  "description": "ESLing and Prettier with TypeScript configurations used by Kroo.",
+  "name": "@abasync/eslint-config",
+  "version": "1.1.0",
+  "description": "ESLing and Prettier with TypeScript configurations used by ABASync.",
   "license": "MIT",
   "private": false,
   "author": {
-    "name": "Kroo Tech",
-    "email": "tech@kroo.com.br",
-    "url": "https://github.com/kroo-tech"
+    "name": "ABASync",
+    "email": "tech@abasync.com.br",
+    "url": "https://github.com/abasync"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kroo-tech/eslint-config.git"
+    "url": "git+https://github.com/abasync/eslint-config.git"
   },
   "bugs": {
-    "url": "https://github.com/kroo-tech/eslint-config/issues"
+    "url": "https://github.com/abasync/eslint-config/issues"
   },
-  "homepage": "https://github.com/kroo-tech/eslint-config#readme",
+  "homepage": "https://github.com/abasync/eslint-config#readme",
   "main": "next.js",
   "scripts": {
     "version:patch": "npm version patch --git-tag-version false",
@@ -33,8 +33,8 @@
     "nest"
   ],
   "peerDependencies": {
-    "eslint": "^8.0.0",
-    "typescript": ">=4"
+    "eslint": ">=8.0.0",
+    "typescript": ">=5.4.5"
   },
   "peerDependenciesMeta": {
     "typescript": {
@@ -42,15 +42,17 @@
     }
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.9.1",
-    "@typescript-eslint/parser": "^6.9.1",
-    "eslint": "^8.0.0",
-    "eslint-config-prettier": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.4",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.0.3"
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.4"
   }
 }
